- Api ready - TODO: ** load swagger from yaml file ** email validation not working?? ** IT tests
